# USEFULL_TOOLS

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  pyproject.toml
.github/workflows/: ci.yml
bash-tools/: convert.md  convert.sh  convert_mp4_to_mp3.sh  modify_files.sh  remove_duplicates.sh
css-tools/: markdown.css
devkit/: __init__.py  cli.py  utils.py
devkit/ai/: __init__.py  cost_calculator.py  prompt_template.py  token_counter.py
devkit/convert/: __init__.py  doc_convert.py  md2docx.py  md2pdf.py  media.py  pdf_compress.py  pdf_merge.py  pdf_parse.py
devkit/data/: __init__.py  csv_utils.py  excel2csv.py  json_utils.py
devkit/dev/: __init__.py  env_checker.py  git_stats.py  hash_tool.py  port_finder.py
devkit/files/: __init__.py  batch_rename.py  dedup.py  extract_code.py  search_log.py
devkit/text/: __init__.py  keywords.py  split_sentence.py  text_length.py  tokenizer.py
devkit/web/: __init__.py  qr_code.py  url_validator.py
examples/sample_data/: sample.csv  sample.json  sample.md
files/: 01-100大新材料.json  leetcode_problems.csv  notion_problems.json  得到课程_page_info.json  经济学人.json  薛兆丰的经济学课_page_info.json
files/ics_files/: 0-dairy_notes_reminder.ics  0-宁向东管理学课程.ics  0-薛兆丰的经济学课.ics  1-problems_reminder.ics  2-workday_reminder.ics  3-todo_reminders.ics  4-daily_quotes_reminders.ics  5-daily_schedule.ics  5-voice_diary_reminders.ics
js-tools/: markdown.js
notion_calendar/: 01daily_schedule.py  CalendarEventGenerator.py  dedao_class_reminder.py  diary2notion.py  directory2notion.py  everydayUp.py  get_sub_pages.py  leetcode2notion.py  markdown2notion.py  todo2notion.py  unzip_allfiles.py  workreminder2notion.py  得到课程学习.py  经济学课程学习.py
python-tools/: md2docx.py  md2pdf.py  split_sents.py
tests/: test_ai.py  test_cli.py  test_convert.py  test_data.py  test_dev.py  test_files.py  test_text.py  test_utils.py  test_web.py
tools/bash-tools/: compress_pdfs.sh  extract_codes.sh  resize.sh  (+2 more)
(+6 files in other folders)
